design fixes, improved readability

--- a/css/globalElements.css
+++ b/css/globalElements.css
@@ -88,14 +88,14 @@ nav .menu-button button .line {
     width: 100%;
     height: 100%;
     z-index: 1000;
-    transition: right 0.3s ease;
+    transition: right 0.2s ease;
 }
 
 .overlay-menu {
     position: absolute;
     top: 0;
     right: 0;
-    height: 100%;
+    height: 130%;
     width: 100%;
     background-color: #f5f5f5;
 }
